tests/fail/02-nesting.stderr
error[E0277]: the trait bound `C: Sealed` is not satisfied
  --> tests/fail/02-nesting.rs:26:6
   |
26 | impl lets::attempt::some::nesting::T for C {}
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Sealed` is not implemented for `C`
   |
note: required by a bound in `T`
  --> tests/fail/02-nesting.rs:8:17
   |
8  |                 #[sealed(pub(crate))]
   |                 ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `T`
9  |                 pub trait T {}
   |                           - required by a bound in this
   = note: this error originates in the attribute macro `sealed` (in Nightly builds, run with -Z macro-backtrace for more info)
